further code refactorings
* switch expression
* Files.writeString